links added on pet site

--- a/pet-website/pet-website.html
+++ b/pet-website/pet-website.html
@@ -15,5 +15,12 @@
       <li>car</li>
       <li>plane</li>
     </ol>
+
+    <a href="http://www.timeanddate.com/calendar/monthly.html?year=2016&month=8&country=1">
+      This is a pet month</a>
+
+    <p>what is a pet</p>
+    <a href="https://en.wikipedia.org/wiki/Pet">
+      This is a pet</a>
   </body>
 </html>
