Added photo and categories

--- a/pet-website/pet-website.html
+++ b/pet-website/pet-website.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>pet website</title>
+    <title>Gary the Dog</title>
   </head>
   <body>
-    <h1>pet's favorite things</h1>
-    <h2>here are some food</h2>
+    <h1>Gary Francis Geraci</h1>
+    <h2>Dog</h2>
+    <img src="img/dog-photo.jpeg" alt="Gary the Dog" />
+    <h2><a href=""here are some food</h2>
     <ul>
-      <li>fish</li>
-      <li>telephone</li>
+      <li>Salmon</li>
+      <li>Teriyaki Chicken</li>
+      <li>Foie Gras</li>
+      <li>Flamin' Hot Cheetos</li>
+
     </ul>
     <h2>here are some toys</h2>
     <ol>
