added more links and pictures

--- a/pet-website/Andy-foods.html
+++ b/pet-website/Andy-foods.html
@@ -7,14 +7,15 @@
     <h1>Gary Francis Geraci</h1>
     <h2>Dog</h2>
     <img src="http://b.fastcompany.net/multisite_files/fastcompany/imagecache/inline-large/inline/2015/04/3045572-inline-i-2-menswear-dog-shell-copy.jpg"alt="Gary Varsity"/>
-<h3>My Favorite Foods</h3>
+  <em><h3>My Favorite Foods</h3></em>
   <ul>
     <li>Salmon</li>
     <li>Teriyaki Chicken</li>
     <li>Foie Gras</li>
-    <li>Flamin' Hot Cheetos</li>
+    <li><em>Flamin' Hot Cheetos</em></li>
     <li>Leather Sandals</li>
   </ul>
-<p><a href="pet-website.html">Return Home</a></p>
+  <a href="andy-toys.html">My Favorite Toys</a>
+  <p><a href="pet-website.html">Return Home</a></p>
   </body></center>
 </html>
