--- a/pet-website/andy-toys.html
+++ b/pet-website/andy-toys.html
@@ -7,8 +7,9 @@
     <h1>Gary Francis Geraci</h1>
     <h2>Dog</h2>
     <img src="http://41.media.tumblr.com/2f3eada9bc10adf6c4a18d60ea2977d7/tumblr_nve69vTwFK1s4yg05o1_500.jpg" alt="Gary Leather" />
+  <em><h3>My Favorite Toys</h3></em>
   <ul>
-    <center><li>Fast Cars</li></center>
+    <center><li><a href="http://www.lamborghini.com/en/home/">Fast Cars <p><img src="https://s-media-cache-ak0.pinimg.com/236x/7e/48/f7/7e48f798a611740921c3db3ae2961b70.jpg" alt="Fast Cars"></p></a></li></center>
     <center><li>Private Jets</li></center>
     <center><li>Rockets</li></center>
     <center><li><a href="http://www.apple.com/ipad-pro/">iPad Pro</li></center>
